--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wdd131- Benedict Nwanze</title>
+    <title>wdd131- Benedict</title>
     <link rel="stylesheet" type="text/css" href="layout.css"> 
 </head>
 <body>
     <header>
         <h1 contenteditable>Header</h1>
+        <nav class="navigation modern">
+            <a href="#" title="Home">Home</a>
+            <a href="#" title="About Us">About</a>
+            <a href="#" title="Our Partners">Affiliates</a>
+            <a href="#" title="History of Our Organization">History</a>
+            <a href="#" title="Contact Us">Contact</a>
+        </nav>
       </header>
       <div class="left-sidebar" contenteditable>Left Sidebar</div>
       <main contenteditable></main>
