--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 - Dynamic Web Fundamentals - Benedict Nwanze</title>
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze">
-    <meta name="author" content="Benedict Nwanze"> 
-    <script src="scripts/getdates.js" defer></script> 
-    <link rel="stylesheet" href="styles/layout.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WDD 131 - Dynamic Web Fundamentals - Benedict Nwanze</title>
+  <meta name="description" content="This site contains Benedict's WDD 131 Dynamic Web Fundamentals home page assignment, featuring web development resources, personal projects, and insights into web design best practices.">
+  <meta name="author" content="Benedict Nwanze"> 
+  <script src="scripts/getdates.js" defer></script> 
+  <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
-    <header>
-        <h1>WDD 131: Dynamic Web Fundamentals - Benedict Nwanze</h1>
-        <nav class="navigation modern">
-            <nav class="navigation modern">
-                <a href="https://www.linkedin.com/in/benedict-nwanze-1aaa561a0/" title="LinkedIn">LinkedIn</a>
-                <a href="https://byui.instructure.com/." title="I-Learn">I-Learn</a>
-                <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/25?lang=eng&id=p26#p26" title="Scripture">Scripture</a>
-                <a href="#" title="Final Project">Final Project</a>
-            </nav>
-        </nav>
-      </header>
+  <header>
+    <h1>WDD 131: Dynamic Web Fundamentals - Benedict Nwanze</h1>
+    <nav class="navigation modern">
+      <a href="https://www.linkedin.com/in/benedict-nwanze-1aaa561a0/" title="LinkedIn">LinkedIn</a>
+      <a href="https://byui.instructure.com/." title="I-Learn">I-Learn</a>
+      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/25?lang=eng&id=p26#p26" title="Scripture">Scripture</a>
+      <a href="#" title="Final Project">Final Project</a>
+    </nav>
+  </header>
       <main>
-      <div class="left-sidebar">
+        <div class="left-sidebar">
         <h2>About Me</h2>
         <img src="images/personal.jpg" alt="Benedict Nwanze" width="150" class="img-right ">
         <p>My name is Benedict Nwanze, and I'm a web developer based in Lagos, Nigeria. I come from a family of four, with one elder brothers and a loving mother and father. In my free time, I enjoy exploring the natural beauty of Lagos, reading books, and learning new web development techniques.</p>  
@@ -32,7 +30,7 @@
           Lagos State is a state in southwestern Nigeria. Of the 36 Nigerian states, it is the second most populous state but the smallest in area. Nigeria, officially the Federal Republic of Nigeria, is a country in West Africa. It is situated between the Sahel to the north and the Gulf of Guinea to the south in the Atlantic Ocean. It covers an area of 923,769 square kilometres (356,669 sq mi). With a population of more than 230 million, it is the most populous country in Africa, and the world's sixth-most populous country.
         </p>
       </div>
-      </main>
+      
       <div class="right-sidebar">
         <h2>Web Dev Resources</h2>  
         <ul>  
@@ -44,6 +42,7 @@
         </ul>  
         </nav>
       </div>
+    </main>
       <footer><p>&copy; <span id="currentyear"></span> Benedict, Lagos State, Nigeria.</p>  
         <p id="lastModified"></p> </footer>
 </body>
