--- a/basic-layout.html
+++ b/basic-layout.html
@@ -6,8 +6,8 @@
     <title>WDD 131 - Dynamic Web Fundamentals - Benedict Nwanze</title>
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze">
     <meta name="author" content="Benedict Nwanze"> 
-    <script src="week01/scripts/getdates.js" defer></script> 
-    <link rel="stylesheet" href="week01\styles\layout.css">
+    <script src="week01\scripts\getdates.js" defer></script> 
+    <link rel="stylesheet" href="week01/styles/layout.css">
 </head>
 <body>
     <header>
