--- a/basic-layout.html
+++ b/basic-layout.html
@@ -6,8 +6,8 @@
     <title>WDD 131 - Dynamic Web Fundamentals - Benedict Nwanze</title>
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze">
     <meta name="author" content="Benedict Nwanze"> 
-    <script src="week01\scripts\getdates.js" defer></script> 
-    <link rel="stylesheet" href="week01/styles/layout.css">
+    <script src="scripts/getdates.js" defer></script> 
+    <link rel="stylesheet" href="week01\basic-layout.html">
 </head>
 <body>
     <header>
@@ -21,10 +21,10 @@
     <main>
       <div class="left-sidebar">
         <h2>About Me</h2>
-        <img src="week01\images\benedict photo.jpg" alt="Benedict Nwanze" width="150" class="img-right ">
+        <img src="images/personal.jpg" alt="Benedict Nwanze" width="150" class="img-right ">
         <p>My name is Benedict Nwanze, and I'm a web developer based in Lagos, Nigeria. I come from a family of four, with one elder brothers and a loving mother and father. In my free time, I enjoy exploring the natural beauty of Lagos, reading books, and learning new web development techniques.</p>  
         <h3>Lagos state, Nigeria</h3>
-        <img src="week01\images\lagosstate.jpeg" alt="Lagos, Nigeria" width="200" class="img-left">
+        <img src="images/lagosstate.jpeg" alt="Lagos, Nigeria" width="200" class="img-left">
         <p>
           Lagos State is a state in southwestern Nigeria. Of the 36 Nigerian states, it is the second most populous state but the smallest in area. Nigeria, officially the Federal Republic of Nigeria, is a country in West Africa. It is situated between the Sahel to the north and the Gulf of Guinea to the south in the Atlantic Ocean. It covers an area of 923,769 square kilometres (356,669 sq mi). With a population of more than 230 million, it is the most populous country in Africa, and the world's sixth-most populous country.
         </p>
