--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>WDD 131 - Dynamic Web Fundamentals - Benedict Nwanze</title>
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze">
     <meta name="author" content="Benedict Nwanze"> 
-    <script src="week01\scripts\getdates.js" defer></script> 
-    <link rel="stylesheet" href="week01/styles/layout.css">
+    <script src="scripts\getdates.js" defer></script> 
+    <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
     <header>
@@ -17,11 +17,12 @@
         <a href="https://byui.instructure.com/." title="I-Learn">I-Learn</a>
         <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/25?lang=eng&id=p26#p26" title="Scripture">Scripture</a>
         <a href="#" title="Final Project">Final Project</a>
-      </header>
+      </nav>
+    </header>
     <main>
-      <div class="left-sidebar">
+      <div class="left">
         <h2>About Me</h2>
-        <img src="week01\images\benedict photo.jpg" alt="Benedict Nwanze" width="150" class="img-right ">
+        <img src="images\benedictphoto.jpg" alt="Benedict Nwanze" width="150" class="img-right ">
         <p>My name is Benedict Nwanze, and I'm a web developer based in Lagos, Nigeria. I come from a family of four, with one elder brothers and a loving mother and father. In my free time, I enjoy exploring the natural beauty of Lagos, reading books, and learning new web development techniques.</p>  
         <h3>Lagos state, Nigeria</h3>
         <img src="week01\images\lagosstate.jpeg" alt="Lagos, Nigeria" width="200" class="img-left">
@@ -30,15 +31,16 @@
         </p>
       </div>
     </main>
-      <div class="right-sidebar">
-        <h2>Web Dev Resources</h2>  
-        <ul>  
-          <li><a href="https://dev.to/">Dev.to Community</a></li>  
-          <li><a href="https://www.smashingmagazine.com/">Smashing Magazine</a></li>  
-          <li><a href="https://css-tricks.com/">CSS Tricks</a></li> 
-          <li><a href="https://www.w3schools.com/">w3school</a></li>  
-          <li><a href="https://www.udemy.com/">Udemy</a></li>  
-        </ul>  
+      <div class="right">
+        <h2>Web Dev Resources</h2>
+        <nav class="">
+          <ul>
+            <li><a href="https://dev.to/">Dev.to Community</a></li>
+            <li><a href="https://www.smashingmagazine.com/">Smashing Magazine</a></li>  
+            <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
+            <li><a href="https://www.w3schools.com/">w3school</a></li>
+            <li><a href="https://www.udemy.com/">Udemy</a></li>
+          </ul>  
         </nav>
       </div>
       <footer><p>&copy; <span id="currentyear"></span> Benedict, Lagos State, Nigeria.</p>  
