--- a/basic-layout.html
+++ b/basic-layout.html
@@ -7,7 +7,7 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze">
     <meta name="author" content="Benedict Nwanze"> 
     <script src="scripts/getdates.js" defer></script> 
-    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/base.css">
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
       <div class="left-sidebar">
         <h2>About Me</h2>
         <img src="images/benedictphoto.jpg" alt="Benedict Nwanze" width="150" class="img-right ">
-        <p>My name is Benedict Nwanze, and I'm a web developer based in Lagos, Nigeria. I come from a family of four, with one elder brothers and a loving mother and father. In my free time, I enjoy exploring the natural beauty of Lagos, reading books, and learning new web development techniques.</p>  
+        <p>My name is Benedict Nwanze, and I'm a web developer based in Lagos, Nigeria. I come from a family of four, with one elder brothers and a loving mother and father. In my free time, I watch animes, read books, and learn new things.</p>  
         <h3>Lagos state, Nigeria</h3>
         <img src="images/lagosstate.jpeg" alt="Lagos, Nigeria" width="200" class="img-left">
         <p>
