--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze">
     <meta name="author" content="Benedict Nwanze"> 
     <script src="scripts/getdates.js" defer></script> 
-    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/base.css">
 </head>
 <body>
     <header>
