--- a/index.html
+++ b/index.html
@@ -28,39 +28,39 @@
         <main>
             <h2 id="headerDynamic"></h2>
             <figure>
-                <img src="images\Nigeria aba temple.jpg" alt= "San Jose Costa Rica Temple">
+                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
                 <figcaption>Aba Nigeria Temple</figcaption>
             </figure>
             <figure>
-                <img src="images\Nigeria aba temple.jpg" alt= "San Jose Costa Rica Temple">
+                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
                 <figcaption>Aba Nigeria Temple</figcaption>
             </figure>
             <figure>
-                <img src="images\Nigeria aba temple.jpg" alt= "San Jose Costa Rica Temple">
+                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
                 <figcaption>Aba Nigeria Temple</figcaption>
             </figure>
             <figure>
-                <img src="images\Nigeria aba temple.jpg" alt= "San Jose Costa Rica Temple">
+                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
                 <figcaption>Aba Nigeria Temple</figcaption>
             </figure>
             <figure>
-                <img src="images\Nigeria aba temple.jpg" alt= "Aba Nigeria Temple">
+                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
                 <figcaption>Aba Nigeria Temple</figcaption>
             </figure>
             <figure>
-                <img src="images\Nigeria aba temple.jpg" alt= "Aba Nigeria Temple">
+                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
                 <figcaption>Aba Nigeria Temple</figcaption>
             </figure>
             <figure>
-                <img src="images\Nigeria aba temple.jpg" alt= "Aba Nigeria Temple">
+                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
                 <figcaption>Aba Nigeria Temple</figcaption>
             </figure>
             <figure>
-                <img src="images\Nigeria aba temple.jpg" alt= "Aba Nigeria Temple">
+                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
                 <figcaption>Aba Nigeria Temple</figcaption>
             </figure>
             <figure>
-                <img src="images\Nigeria aba temple.jpg" alt= "Aba Nigeria Temple">
+                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
                 <figcaption>Aba Nigeria Temple</figcaption>
             </figure>
         </main>
