--- a/index.html
+++ b/index.html
@@ -6,65 +6,67 @@
     <title>WDD 131 - Dynamic Web Fundamentals - Benedict Nwanze</title>
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze">
     <meta name="author" content="Benedict Nwanze"> 
-    <script src="scripts\temples.js" defer></script> 
-    <link rel="stylesheet" href="styles\temples.css">
-    <link rel="stylesheet" href="styles\temple-large.css">
+    <script src="scripts/temples.js" defer></script> 
+    <link rel="stylesheet" href="styles/temples.css">
+    <link rel="stylesheet" href="styles/temple-large.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <body>
-        <header>
-            <h1>Temple Album</h1>
-            <button id="menu" aria-label="Toggle navigation menu"></button>
-            <nav class="navigation">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Old</a></li>
-                    <li><a href="#">New</a></li>
-                    <li><a href="#">Large</a></li>
-                    <li><a href="#">Small</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <h2 id="headerDynamic"></h2>
-            <figure>
-                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
-                <figcaption>Aba Nigeria Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
-                <figcaption>Aba Nigeria Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
-                <figcaption>Aba Nigeria Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
-                <figcaption>Aba Nigeria Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
-                <figcaption>Aba Nigeria Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
-                <figcaption>Aba Nigeria Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
-                <figcaption>Aba Nigeria Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
-                <figcaption>Aba Nigeria Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images\aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
-                <figcaption>Aba Nigeria Temple</figcaption>
-            </figure>
-        </main>
-        <footer><p>&copy; <span id="currentyear"></span> Benedict, Lagos State, Nigeria.</p>  
+    <header>
+        <h1>Temple Album</h1>
+        <button id="menu" aria-label="navigation"></button>
+        <nav class="navigation">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Old</a></li>
+                <li><a href="#">New</a></li>
+                <li><a href="#">Large</a></li>
+                <li><a href="#">Small</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2 id="images"></h2>
+        <figure>
+            <img src="images/aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
+            <figcaption>Aba Nigeria Temple</figcaption>
+        </figure>
+        <figure>
+            <img src="images/aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
+            <figcaption>Aba Nigeria Temple</figcaption>
+        </figure>
+        <figure>
+            <img src="images/aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
+            <figcaption>Aba Nigeria Temple</figcaption>
+        </figure>
+        <figure>
+            <img src="images/aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
+            <figcaption>Aba Nigeria Temple</figcaption>
+        </figure>
+        <figure>
+            <img src="images/aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
+            <figcaption>Aba Nigeria Temple</figcaption>
+        </figure>
+        <figure>
+            <img src="images/aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
+            <figcaption>Aba Nigeria Temple</figcaption>
+        </figure>
+        <figure>
+            <img src="images/aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
+            <figcaption>Aba Nigeria Temple</figcaption>
+        </figure>
+        <figure>
+            <img src="images/aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
+            <figcaption>Aba Nigeria Temple</figcaption>
+        </figure>
+        <figure>
+            <img src="images/aba-nigeria-temple.jpg" alt= "Aba Nigeria Temple">
+            <figcaption>Aba Nigeria Temple</figcaption>
+        </figure>
+    </main>
+    <footer><p>&copy; <span id="currentyear"></span> Benedict, Lagos State, Nigeria.</p>  
             <p id="lastModified"></p> </footer>
 </body>
 </html>
