--- a/place.html
+++ b/place.html
@@ -24,7 +24,7 @@
             <picture>
                 <source media="(min-width: 500px)" srcset="images/theatre.webp">
                 <source media="(min-width: 200px)" srcset="images/beninart.webp">
-                <img src="images/theatre.webp" alt="nigerian national theatre">
+                <img src="images/theatre.webp" alt="nigerian national theatre" width="400" height="400">
             </picture>
         </div>
         <section class="card data">
@@ -51,7 +51,7 @@
 
         <section class="card weather">
             <h2>Weather</h2>
-            <img src="images\1530391_weather_clouds_sun_sunny_icon (1).svg" alt="weather icon">
+            <img src="images/1530391_weather_clouds_sun_sunny_icon (1).svg" alt="weather icon">
             <div class="column">
                 <span class="label">Temperature:</span>
                 <span class="value">27°C</span>
