final for the day

--- a/place.html
+++ b/place.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze week03">
     <meta name="author" content="Nwanze Benedict">
-    <title>Nigeria</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Benedict Nwanze</title>
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/bigplace.css">
     <script src="scripts/getdates.js" defer></script>
