this looks good

--- a/place.html
+++ b/place.html
@@ -51,7 +51,7 @@
 
         <section class="card weather">
             <h2>Weather</h2>
-            <img src="images/1530391_weather_clouds_sun_sunny_icon (1).svg" alt="weather icon">
+            <img src="images/weather_clouds_sun_sunny_icon.svg" alt="weather icon">
             <div class="column">
                 <span class="label">Temperature:</span>
                 <span class="value">27°C</span>
