--- a/temples.html
+++ b/temples.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WDD 131 - Dynamic Web Fundamentals - Benedict Nwanze</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze">
+    <meta name="author" content="Benedict Nwanze"> 
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temple-large.css">
     <script src="scripts/temples1.js" defer></script>
