--- a/index.html
+++ b/index.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles\temples1.css">
-    <link rel="stylesheet" href="styles/temple-large1.css">
-    <script src="scripts/temples1.js" defer></script>
-    <title>Document</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Benedict Nwanze</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze">
+    <meta name="author" content="Benedict Nwanze"> 
+    <script src="scripts/temples.js" defer></script> 
+    <link rel="stylesheet" href="styles/temples.css">
+    <link rel="stylesheet" href="styles/temple-large.css">
 </head>
 <body>
     <header>
         <h1>Temple Album</h1>
-        <a id="menu" href="#"></a>
-<nav>
-	<ul class="navigation">
-		<li><a href="#">Home</a></li>
-        <li><a href="#">Old</a></li>
-        <li><a href="#">New</a></li>
-        <li><a href="#">Large</a></li>
-        <li><a href="#">Small</a></li>
-	</ul>
-</nav>
+        <button id="menu" aria-label="navigation"></button>
+        <nav class="navigation">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Old</a></li>
+                <li><a href="#">New</a></li>
+                <li><a href="#">Large</a></li>
+                <li><a href="#">Small</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <h2 id="images"></h2>
@@ -63,6 +65,5 @@
     </main>
     <footer><p>&copy; <span id="currentyear"></span> Benedict, Lagos State, Nigeria.</p>  
             <p id="lastModified"></p> </footer>
-    
 </body>
 </html>
