--- a/temples.html
+++ b/temples.html
@@ -8,8 +8,10 @@
     <meta name="author" content="Benedict Nwanze"> 
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temple-large.css">
-    <script src="scripts/temples1.js" defer></script>
-    <title>Document</title>
+    <script src="scripts/temples.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
