--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 - Dynamic Web Fundamentals - Benedict Nwanze</title>
+    <title>WDD 131 - Dynamic Web Fundamentals Filtered Temple Picture Album- Benedict Nwanze</title>
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze">
     <meta name="author" content="Benedict Nwanze"> 
     <link rel="stylesheet" href="styles/filtered-temples.css">
