--- a/review.html
+++ b/review.html
@@ -21,7 +21,7 @@
     <main class="form-submission-page">
         <div class="form-submission-msg">
             <p>Thank you for submitting your review! <span>😀</span></p>
-            <p>Number of successful submissions: <span id="count"></span></p>
+            <p>Total Reviews Completed: <span id="count"></span></p>
         </div>
     </main>
     <footer>
