--- a/review.html
+++ b/review.html
@@ -20,12 +20,12 @@
     </header>
     <main class="form-submission-page">
         <div class="form-submission-msg">
-            <p>Thank you for submitting your review! <span>😀</span></p>
-            <p>Total Reviews Completed: <span id="count"></span></p>
+            <p>Thank you for you review<span>😀</span></p>
+            <p>Total reviews done: <span id="count"></span></p>
         </div>
     </main>
     <footer>
-        <p>&copy; <span id="currentyear"></span> Benedict Nwanze, Lagos State, Nigeria.</p> 
+        <p>&copy; <span id="currentyear"></span>💒 Benedict Nwanze, Lagos State, Nigeria 💒.</p> 
         <p id="lastModified"></p>
     </footer>
     
