--- a/form.html
+++ b/form.html
@@ -73,7 +73,7 @@
         </form>
     </main>
     <footer>
-        <p>&copy; <span id="currentyear"></span> 💒 Benedict Nwanze, Lagos State, Nigeria.  💒.</p> 
+        <p>&copy; <span id="currentyear"></span> 💒 Benedict Nwanze, Lagos State, Nigeria  💒.</p> 
         <p id="lastModified"></p>
     </footer>
     
