--- a/siteplan.html
+++ b/siteplan.html
@@ -21,7 +21,7 @@
     <h4>2. beneco.com</h4>
     <p>BENECO.com is an online destination for gentlemen's fashion that embodies sophistication and contemporary style. </p>
     <h4>3. Site purpose</h4>
-    <p>"Our purpose is to empower the modern gentleman to express his individuality and confidence through sophisticated and stylish attire. We curate a diverse selection of high-quality clothing and accessories that blend timeless elegance with contemporary fashion trends. Our mission is to provide guidance and inspiration for cultivating a refined wardrobe, promoting a sense of personal style that is both authentic and versatile. We believe that every gentleman deserves to feel distinguished and self-assured, whether for formal occasions, professional settings, or casual outings."</p>
+    <p>Our purpose is to empower the modern gentleman to express his individuality and confidence through sophisticated and stylish attire. We curate a diverse selection of high-quality clothing and accessories that blend timeless elegance with contemporary fashion trends. Our mission is to provide guidance and inspiration for cultivating a refined wardrobe, promoting a sense of personal style that is both authentic and versatile. We believe that every gentleman deserves to feel distinguished and self-assured, whether for formal occasions, professional settings, or casual outings.</p>
     
     <h4>4. Scenarios</h4>
     <p>What recommendations would you make for an appropriate attire ensemble, including accessories?</p>
@@ -37,8 +37,8 @@
     </div>
 
     <h4>5. Typography:</h4>
-    <p>Headings:DM Serif Text</p>
-    <p>Body and Footer: Roboto</p>
+    <p>Headings: San-serif</p>
+    <p>Body and Footer: Georgia</p>
 
 
     <h4 id="images">6. Wireframe:</h4>
