--- a/project/index.html
+++ b/project/index.html
@@ -26,6 +26,7 @@
 
             <a href="suits.html">Gentlemen Suites</a>
             <a href="items.html">Items and Accessories</a>
+            <a href="siteplan.html">Site Plan</a>
         </nav>
     </header>
     <main>
