--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -6,9 +6,8 @@
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals, Benedict Nwanze week03">
     <meta name="author" content="Nwanze Benedict">
     <title>WDD 131 - Dynamic Web Fundamentals - Benedict Nwanze</title>
-    <link rel="stylesheet" href="styles\siteplan.css">
+    <link rel="stylesheet" href="styles/siteplan.css">
     <script src="scripts/getdates.js" defer></script>
-    <script defer src="scripts/getdates.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
@@ -31,9 +30,7 @@
     <h4>5. Color Schema: </h4>
     <div class="image-box">
         <div class="card card1"><p>Background colors</p></div>
-        <div class="card card2"><p>Body</p></div>
-        <div class="card card3"><P>Heading</P></div>
-        <div class="card card4"><p>image designs</p></div>
+        <div class="card card4"><p>Header and Footer</p></div>
     </div>
 
     <h4>5. Typography:</h4>
@@ -43,11 +40,11 @@
 
     <h4 id="images">6. Wireframe:</h4>
         <figure>
-            <img src="images/siteplandesktop.jpg" alt= "Aba Nigeria Temple" width="512px" height="384px">
+            <img src="images/lo.jpg" alt= "desktopsite" width="512px" height="384px">
             <figcaption>Desktop view</figcaption>
         </figure>
         <figure>
-            <img src="images/siteplanphone.jpg" alt= "Aba Nigeria Temple" width="160" height="240">
+            <img src="images/mobilesite.jpg" alt= "mobileview" width="160" height="240">
             <figcaption>Mobile view </figcaption>
         </figure>
 
