--- a/project/index.html
+++ b/project/index.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <h2>About</h2>
+        <h2>Beneco Gentlemen Fashion</h2>
     
         <div class="about">
           <picture class="image1">
@@ -51,11 +51,9 @@
             <p>Accessories play a critical role in defining a man's style, and Beneco offers an impressive range of options. 
               Leather belts, meticulously crafted in various textures and colors, provide the perfect finishing touch to any outfit. 
               Their selection of ties and bow ties enhances formal attire, featuring patterns and fabrics that cater to both classic
-               and modern tastes.
+               and modern tastes.</p>
 
-              Footwear Essentials
-              
-              Footwear is another standout aspect of Beneco's offerings. From dress shoes that complement formal looks to
+              <p>Footwear is another standout aspect of Beneco's offerings. From dress shoes that complement formal looks to
                stylish sneakers that cater to a more laid-back vibe, the collection is designed for comfort and durability.
                 Each pair reflects a commitment to craftsmanship, ensuring that style does not come at the expense of
                  practicality.</p>
