fixed site plan

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -40,11 +40,11 @@
 
     <h4 id="images">6. Wireframe:</h4>
         <figure>
-            <img src="images/lo.jpg" alt= "desktopsite" width="512px" height="384px">
+            <img src="images/lo.jpg" alt= "desktopsite" >
             <figcaption>Desktop view</figcaption>
         </figure>
         <figure>
-            <img src="images/mobilesite.jpg" alt= "mobileview" width="160" height="240">
+            <img src="images/mobilesite.jpg" alt= "mobileview">
             <figcaption>Mobile view </figcaption>
         </figure>
 
